--- a/config.json
+++ b/config.json
@@ -38,8 +38,8 @@
         "colors" : ["Please give array of hex colors as strings!"],
         "dataPrecision" : Please give a number!,
         "dataUnit" : "Please give the data unit of the serial chart as a string!",
-        "yAxesMax" : Please give the maximum Y axis value as a number!,
-        "yAxesMin" : Please give the minimum Y axis value as a number!,
+        "yAxesMax" : "Please give the maximum Y axis value as a string containing number!",
+        "yAxesMin" : "Please give the minimum Y axis value as a string containing number!",
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias"
@@ -58,8 +58,8 @@
 		"colors" : ["Please give array of hex colors as strings!"],
 		"dataPrecision" : Please give a number!,
 		"dataUnit": "Please give the data unit of the radar chart as a string!",
-        "xAxesMax" : "Please give the maximum axis value as a number!",
-        "xAxesMin" : "Please give the minimum axis value as a number!",        
+        "xAxesMax" : "Please give the maximum axis value as a string containing number!",
+        "xAxesMin" : "Please give the minimum axis value as a string containing number!",        
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias"
@@ -72,10 +72,10 @@
 		"xUnit": "Please give the data unit of the bubble chart's X axis as a string!",
 		"yUnit": "Please give the data unit of the bubble chart's Y axis as a string!",
 		"zUnit": "Please give the data unit of the bubble chart bubble size as a string!",
-		"xAxesMax": "Please give the maximum X axis value as a number!",
-		"xAxesMin": "Please give the minimum X axis value as a number!",
-		"yAxesMax": "Please give the maximum Y axis value as a number!",	
-		"yAxesMin": "Please give the minimum Y axis value as a number!",
+		"xAxesMax": "Please give the maximum X axis value as a string containing number!",
+		"xAxesMin": "Please give the minimum X axis value as a string containing number!",
+		"yAxesMax": "Please give the maximum Y axis value as a string containing number!",	
+		"yAxesMin": "Please give the minimum Y axis value as a string containing number!",
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias",
@@ -129,8 +129,8 @@
         "colors" : ["Please give array of hex colors as strings!"],
         "dataPrecision" : Please give a number!,
         "dataUnit" : "Please give the data unit of the serial chart as a string!",
-        "yAxesMax" : Please give the maximum Y axis value as a number!,
-        "yAxesMin" : Please give the minimum Y axis value as a number!,
+        "yAxesMax" : "Please give the maximum Y axis value as a string containing number!",
+        "yAxesMin" : "Please give the minimum Y axis value as a string containing number!",
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias"
@@ -149,8 +149,8 @@
 		"colors" : ["Please give array of hex colors as strings!"],
 		"dataPrecision" : Please give a number!,
 		"dataUnit": "Please give the data unit of the radar chart as a string!",
-        "xAxesMax" : "Please give the maximum axis value as a number!",
-        "xAxesMin" : "Please give the minimum axis value as a number!",        
+        "xAxesMax" : "Please give the maximum axis value as a string containing number!",
+        "xAxesMin" : "Please give the minimum axis value as a string containing number!",        
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias"
@@ -163,10 +163,10 @@
 		"xUnit": "Please give the data unit of the bubble chart's X axis as a string!",
 		"yUnit": "Please give the data unit of the bubble chart's Y axis as a string!",
 		"zUnit": "Please give the data unit of the bubble chart bubble size as a string!",
-		"xAxesMax": "Please give the maximum X axis value as a number!",
-		"xAxesMin": "Please give the minimum X axis value as a number!",
-		"yAxesMax": "Please give the maximum Y axis value as a number!",	
-		"yAxesMin": "Please give the minimum Y axis value as a number!",
+		"xAxesMax": "Please give the maximum X axis value as a string containing number!",
+		"xAxesMin": "Please give the minimum X axis value as a string containing number!",
+		"yAxesMax": "Please give the maximum Y axis value as a string containing number!",	
+		"yAxesMin": "Please give the minimum Y axis value as a string containing number!",
         "fieldMap" : {
             "field" : "alias",
             "field" : "alias",
