--- a/config.json
+++ b/config.json
@@ -187,5 +187,5 @@
 			}	
 		}
     },
-"creators" : "Creators of the Dash-Map-Board project: László Lellei (Lechner Knowledge Center), Zsolt Ónodi (Lechner Knowledge Center)"
+"creators" : "Creators of the Dash-Map-Board project: László Lellei (spatial data expert), Zsolt Ónodi (GIS expert)"
 }
